--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+**/migrations/*
+!__init__.py
+**/static
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,3 +131,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.idea
+djangorestframework-simplejwt)
+0.2.2
+.env.py
